# finality-grandpa

./: .clippy.toml  .editorconfig  .rustfmt.toml  .travis.yml  Cargo.toml  README.md  deny.toml
.github/: grcov.yml
.github/workflows/: deny.yml  rust.yml
fuzz/: .gitignore  Cargo.toml
fuzz/afl_targets/: graph.rs  round.rs
fuzz/fuzz_targets/: round.rs
fuzz/libfuzz_targets/: graph.rs
fuzz_corpus/: crash-499bf756959c90958d05c669b77b4a6f85e4fbf5
primitives/: Cargo.toml
primitives/src/: bitfield.rs  lib.rs  round.rs  vote_graph.rs  voter_set.rs
src/: bitfield.rs  bridge_state.rs  fuzz_helpers.rs  lib.rs  round.rs  testing.rs  vote_graph.rs  voter.rs  voter_set.rs  weights.rs
src/round/: context.rs
src/voter/: background_round.rs  mod.rs  past_rounds.rs  tests.rs  voter_state.rs  voting_round.rs
tests/: fuzz.rs
