[package]
name = "finality-grandpa"
version = "0.15.0"
description = "PBFT-based finality gadget for blockchains"
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2.0"
repository = "https://github.com/paritytech/finality-grandpa"
edition = "2018"

[dependencies]
either = { version = "1.6", default-features = false }
futures = { version = "0.3", default-features = false }
futures-timer = { version = "3.0", optional = true }
log = { version = "0.4", optional = true }
num = { package = "num-traits", version = "0.2", default-features = false }
parity-scale-codec = { version = "2.0", default-features = false, features = ["derive"], optional = true }
scale-info = { version = "0.9.0", default-features = false, features = ["derive"], optional = true }
parking_lot = { version = "0.11", optional = true }
rand = { version = "0.8", optional = true }

[dev-dependencies]
quickcheck = "1.0"
rand = "0.8"

[features]
default = ["std"]
std = ["parity-scale-codec/std", "num/std", "parking_lot", "log", "futures-timer", "futures/executor"]
derive-codec = ["parity-scale-codec", "scale-info"]
test-helpers = ["fuzz-helpers", "rand", "std"]
fuzz-helpers = []
