[package]
name = "finality-grandpa"
version = "0.14.4"
description = "PBFT-based finality gadget for blockchains"
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2.0"
repository = "https://github.com/paritytech/finality-grandpa"
edition = "2018"

[dependencies]
async-trait = "0.1"
either = { version = "1.6", default-features = false }
futures = { version = "0.3", default-features = false, features = [
    "async-await",
] }
futures-timer = { version = "3.0", optional = true }
log = { version = "0.4", optional = true }
num = { package = "num-traits", version = "0.2", default-features = false }
parity-scale-codec = { version = "2.0", default-features = false, optional = true, features = [
    "derive",
] }
scale-info = { version = "1.0", default-features = false, optional = true, features = [
    "derive",
] }

[dev-dependencies]
parking_lot = "0.11"
quickcheck = "1.0"
rand = "0.8"

[features]
default = ["std"]
std = [
    "futures-timer",
    "futures/executor",
    "futures/std",
    "log",
    "num/std",
    "parity-scale-codec/std",
    "scale-info/std",
]
derive-codec = ["parity-scale-codec", "scale-info"]
test-helpers = ["fuzz-helpers", "std"]
fuzz-helpers = []
