[package]
name = "finality-grandpa"
version = "0.16.2"
description = "PBFT-based finality gadget for blockchains"
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2.0"
repository = "https://github.com/paritytech/finality-grandpa"
edition = "2021"

[dependencies]
async-trait = { version = "0.1", optional = true }
either = { version = "1.6", default-features = false }
futures = { version = "0.3", optional = true }
futures-timer = { version = "3.0", optional = true }
log = { version = "0.4", optional = true }
num = { package = "num-traits", version = "0.2", default-features = false }
parity-scale-codec = { version = "3", default-features = false, optional = true, features = [
    "derive",
] }
scale-info = { version = "2", default-features = false, optional = true, features = [
    "derive",
] }

[dev-dependencies]
futures = { version = "0.3", features = [
    "thread-pool",
] }
env_logger = "0.9"
futures-timer = "3.0"
parking_lot = "0.12"
quickcheck = "1.0"
rand = "0.8"

[features]
default = ["std"]
std = [
    "async-trait",
    "futures",
    "futures/executor",
    "futures/std",
    "futures-timer",
    "log",
    "num/std",
    "parity-scale-codec/std",
    "scale-info/std",
]
derive-codec = ["parity-scale-codec", "scale-info"]
test-helpers = ["fuzz-helpers", "std"]
fuzz-helpers = []
