[package]
name = "finality-grandpa-primitives"
version = "0.8.0"
description = "PBFT-based finality gadget for blockchains"
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2.0"
repository = "https://github.com/paritytech/finality-grandpa"
edition = "2018"

[dependencies]
parity-codec = { version = "3.3", default-features = false, features = ["derive"] }
