[package]
name = "finality-grandpa-primitives"
version = "0.8.1"
description = "PBFT-based finality gadget for blockchains"
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2.0"
repository = "https://github.com/paritytech/finality-grandpa"
edition = "2018"

[dependencies]
parity-codec = { version = "4.1", default-features = false, features = ["derive"] }
num-traits = { version = "0.2", default-features = false }
serde = { version = "1.0", optional = true, features = ["derive"] }


[features]
default = ["std"]
std = [
	"parity-codec/std",
	"serde",
]
